form不做成组件，详单做成组件
数组格式不变，通过循环数组，将对应的value添加进去

--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
   "pages": [
+    "mine/pages/index/index",
     "completedOrder/pages/index/index",
     "completedOrder/pages/afterSale/afterSale",
     "completedOrder/pages/salesDetailed/salesDetailed",
     "waitingOrder/pages/index/index",
     "waitingOrder/pages/order/order",
     "waitingOrder/pages/detailed/detailed",
-    "pengingInstallOrder/pages/index/index",
-    "mine/pages/index/index"
+    "pengingInstallOrder/pages/index/index"
   ],
   "window": {
     "backgroundTextStyle":"light",
