--- a/project.config.json
+++ b/project.config.json
@@ -28,13 +28,41 @@
 			"current": -1,
 			"list": []
 		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
 		"game": {
 			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
+			"current": 3,
+			"list": [
+				{
+					"id": -1,
+					"name": "待接单",
+					"pathName": "waitingOrder/pages/index/index",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "bianji",
+					"pathName": "waitingOrder/pages/order/order",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "售后",
+					"pathName": "completedOrder/pages/afterSale/afterSale",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "售后xiangqing",
+					"pathName": "completedOrder/pages/salesDetailed/salesDetailed"
+				}
+			]
 		}
 	}
 }
